# tinyjazz

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  REAME.md  build.rs  viz.dot
.cargo/: config
src/: USAGE.docopt  ast.rs  collapse_automata.rs  compute_consts.rs  errors.rs  expand_fn.rs  flatten.rs  interpreter.rs  main.rs  shared_transitions.rs  typed_ast.rs  typing.rs  viz.rs
src/ast/: graph.rs  graph_automaton.rs  mod.rs  parse_ast.rs  typed_ast.rs
src/backends/: mod.rs  netlist.rs
src/compiler/: mod.rs
src/frontend/: automaton.rs  constants.rs  functions.rs  hierarchical_automata.rs  make_graph_automaton.rs  mod.rs  nested_expr.rs  scheduler.rs  typing.rs
src/frontend/from_netlist/: mod.rs  parser.lalrpop  parser.rs
src/frontend/parser_wrapper/: mod.rs  parser.lalrpop  parser.rs
src/interpreter/: mod.rs  scripting.rs
src/interpreters/: high_level_interpreter.rs  low_level_interpreter.rs  mod.rs
src/optimization/: basic.rs  graphs.rs  mod.rs  scheduler.rs
src/parser_wrapper/: mod.rs  parser.lalrpop  parser.rs
src/test/: mod.rs
src/test/compute_consts/fail/: test_div_zero.tj  test_unknow_var.tj
src/test/compute_consts/pass/: test_consts.tj
src/test/expand_fn/pass/: test.tj
src/test/interpreter/: inline_module.tj  script.rhai  scripting.tj
src/tests/interpreter/: counter.tj  inline_module.tj  reg_ram.tj
src/util/: errors.rs  mod.rs  scripting.rs  viz.rs
tinyjazz-code/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
tinyjazz-code/syntaxes/: tinyjazz.tmLanguage.json
(+30 files in other folders)
