[package]
name = "tinyjazz"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.1"
regex = "1"
solvent = "0.8"
docopt = "1.1.0"
serde = "1"
codespan-reporting = "0.9.5"
global_counter = "0.2.1"
rhai = "0.19.6"
dot = "0.1.4"